made some tiny changes

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans');
 
-$font-stack:    Helvetica, sans-serif;
-$primary-color: #4CDBE4  ;
+$font-stack: Open Sans, sans-serif;
+$primary-color: #343434;
 $color-background: #DFF7F7;
 
 body, html {
