--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -38,6 +38,21 @@ body, html {
 
 /*Profile*/
 
+.cool-button {
+  border-radius: 20px;
+  padding: 5px 25px;
+  background-color: white;
+  color: #4ca2cd;
+  font-size: 12px;
+  text-transform: uppercase;
+  box-shadow: 2px 5px 15px black;
+  margin-bottom: -35px;
+}
+
+.cool-button:hover {
+  background-color: gray;
+}
+
 .card {
   margin-top: 20px;
   border-radius: 10px;
@@ -46,8 +61,9 @@ body, html {
 }
 
 .card-title {
-  opacity: 0.7;
+
 }
+
 
 .card-body {
   text-align: center;
@@ -56,6 +72,10 @@ body, html {
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
   opacity: 0.7;
+}
+
+.card-body:hover {
+  opacity: 1;
 }
 
 .card-img-top {
@@ -70,6 +90,10 @@ img {
   object-fit: cover;
   height: 200px;
   width: 200px;
+}
+
+.card-footer {
+  padding-top: 30px;
 }
 
 /*Slider*/
