--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -11,7 +11,15 @@ body, html {
   background-color: none;
 }
 
+.h2 {
+  font-weight: 300;
+}
+
 /*Home page*/
+
+ul.nav li.active a {
+  color: #4da2cd !important;
+}
 
 .bg {
     /* The image used */
@@ -36,6 +44,13 @@ body, html {
   color: #343434;
 }
 
+.home-button {
+  background-color: #4da2cd;
+  margin-top: 25px;
+  border: none;
+  padding: 10px;
+}
+
 /*Profile*/
 
 .cool-button {
@@ -52,6 +67,22 @@ body, html {
 }
 
 .cool-button:hover {
+  background-color: gray;
+}
+
+.cool-button2 {
+  border-radius: 20px;
+  padding: 10px 25px;
+  background-color: white;
+  color: #4ca2cd;
+  text-transform: uppercase;
+  box-shadow: 0px 7px 25px lightblue;
+  border: none;
+  font-size: 1.5vw;
+  letter-spacing: 2.2px;
+}
+
+.cool-button2:hover {
   background-color: gray;
 }
 
@@ -97,6 +128,10 @@ img {
   padding-bottom: 25px;
   color: gray;
   border: none;
+}
+
+label {
+  padding: 20px;
 }
 
 /*Slider*/
