--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -17,10 +17,6 @@ body, html {
 
 /*Home page*/
 
-ul.nav li.active a {
-  color: #4da2cd !important;
-}
-
 .bg {
     /* The image used */
     background-image: url("https://www.dropbox.com/s/0avytix7b67ta5n/white.jpg?raw=1");
@@ -124,7 +120,6 @@ img {
 }
 
 .card-footer {
-  padding-top: 37px;
   padding-bottom: 25px;
   color: gray;
   border: none;
@@ -134,9 +129,10 @@ label {
   padding: 20px;
 }
 
-/*Slider*/
-
-
+.after-button {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
 
 /*Matches*/
 
