--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -391,7 +391,7 @@ label {
     input {
       font-size: 16px;
       float: left;
-      width: 347px;
+      width: 90%;
       height: 40px;
       padding: 0 10px;
       color: #1a1a1a;
