--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -210,6 +210,7 @@ label {
     .person {
       position: relative;
       width: 100%;
+      height: 12%;
       padding: 12px 17% 16px;
       cursor: pointer;
       background-color: #fff;
