--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -152,6 +152,10 @@ label {
   }
 }
 
+.removeUser {
+
+}
+
 .left {
   border: 1px solid #e6e6e6;
   background-color: #fff;
@@ -210,7 +214,7 @@ label {
     .person {
       position: relative;
       width: 100%;
-      height: 12%;
+      height: 15%;
       padding: 12px 17% 16px;
       cursor: pointer;
       background-color: #fff;
