--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -153,7 +153,11 @@ label {
 }
 
 .removeUser {
-
+  color: gray;
+  width: 20px;
+  height: 20px;
+  float: right;
+  padding-top: 10px;
 }
 
 .left {
@@ -239,7 +243,6 @@ label {
       }
       .name {
         font-size: 14px;
-        line-height: 22px;
         color: #1a1a1a;
         font-family: 'Lato', sans-serif;
         font-weight: 600;
@@ -290,7 +293,6 @@ label {
     background-color: white;
     span {
       font-size: 15px;
-      color: white;
       .chatimg {
         padding-top: 0;
         margin-top: -18px;
