--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -175,7 +175,7 @@ label {
   width: 20px;
   height: 20px;
   float: right;
-  padding-top: 10px;
+  padding-top: 8px;
 }
 
 .left {
@@ -314,6 +314,7 @@ label {
       .chatimg {
         padding-top: 0;
         margin-top: -10px;
+        height: 60px;
       }
       .name {
         color: #1a1a1a;
