--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -187,6 +187,8 @@ label {
     width: 100%;
     height: 96px;
     padding: 29px;
+    font-size: 20px;
+    text-align: center;
     &:after {
       position: absolute;
       bottom: 0;
@@ -214,19 +216,7 @@ label {
       outline: none;
     }
   }
-  a.search {
-    display: block;
-    float: right;
-    width: 42px;
-    height: 42px;
-    margin-left: 10px;
-    border: 1px solid #e6e6e6;
-    background-color: #00b0ff;
-    background-image: url("https://s11.postimg.org/dpuahewmn/name_type.png");
-    background-repeat: no-repeat;
-    background-position: top 12px left 14px;
-    border-radius: 50%;
-  }
+
   .people {
     margin-left: -1px;
     border-right: 1px solid #e6e6e6;
@@ -236,8 +226,8 @@ label {
     .person {
       position: relative;
       width: 100%;
-      height: 15%;
-      padding: 12px 17% 16px;
+      height: 14%;
+      padding: 0px 17% 0px;
       cursor: pointer;
       background-color: #fff;
       &:after {
@@ -254,16 +244,16 @@ label {
       }
       img {
         float: left;
-        width: 40px;
-        height: 40px;
-        margin-right: 12px;
+        height: 50px;
+        border: none;
+        margin-right: 20px;
         border-radius: 50%;
+        margin-left: -60px;
       }
       .name {
-        font-size: 14px;
+        font-size: 15px;
         color: #1a1a1a;
-        font-family: 'Lato', sans-serif;
-        font-weight: 600;
+        line-height: 6.2;
       }
       .time {
         font-size: 14px;
@@ -274,23 +264,11 @@ label {
         color: #999;
         background-color: #fff;
       }
-      .preview {
-        font-size: 14px;
-        display: inline-block;
-        overflow: hidden !important;
-        width: 70%;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        color: #999;
-      }
       &.active, &:hover {
-        margin-top: -1px;
-        margin-left: -1px;
-        padding-top: 13px;
         border: 0;
         background-color: #00b0ff;
-        width: calc(100% + 2px);
-        padding-left: calc(10% + 1px);
+        width: calc(100% + 40px);
+        margin-left: -40px;
       }
       &.active span, &:hover span {
         color: #fff;
@@ -318,9 +296,8 @@ label {
       }
       .name {
         color: #1a1a1a;
-        font-family: 'Lato', sans-serif;
-        font-weight: 600;
         padding: 10px;
+        font-size: 20px;
       }
     }
   }
