--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -76,6 +76,22 @@ body, html {
   }
 }
 
+.cool-button3 {
+  margin-bottom: 30px;
+  border-radius: 20px;
+  padding: 10px 25px;
+  background-color: white;
+  color: #4ca2cd;
+  text-transform: uppercase;
+  box-shadow: 0px 7px 25px lightblue;
+  border: none;
+  font-size: 0.75vw;
+  letter-spacing: 2.2px;
+  &:hover {
+    background-color: gray;
+  }
+}
+
 .card {
   margin-top: 20px;
   border-radius: 10px;
