--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -285,8 +285,9 @@ label {
   .top {
     width: 100%;
     height: 47px;
-    padding: 15px 29px;
+    padding-top: 10px;
     background-color: white;
+    margin-bottom: 40px;
     span {
       font-size: 15px;
       .chatimg {
@@ -463,11 +464,16 @@ label {
       &:before, &:after {
         position: absolute;
         top: 10px;
-        display: inline-block;
-        width: 30%;
+        display: block;
         height: 1px;
         content: '';
         background-color: #e6e6e6;
+        bottom: 0;
+        left: 50%;
+        display: block;
+        width: 100%;
+        -webkit-transform: translate(-50%, 0);
+        transform: translate(-50%, 0);
       }
       &:before {
         left: 0;
