Added very basic styling for if user has no available matches

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -163,6 +163,13 @@ label {
   margin-left: -115px;
 }
 
+.err {
+  margin-top: 10%;
+  font-size: 25px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+}
+
 @media only screen and (max-width: 930px) {
   .reject-user {
     margin-top: 25px;
