--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -163,11 +163,43 @@ label {
   margin-left: -115px;
 }
 
+.form-control {
+    width: 50%;
+    height: 42px;
+    padding: 0 15px;
+    border: 1px solid #e6e6e6;
+    background-color: #eceff1;
+    border-radius: 21px;
+    display: inline;
+    margin-left: 20%;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    &:focus {
+      outline: none;
+    }
+  }
+
 .err {
   margin-top: 10%;
   font-size: 25px;
   font-family: Montserrat, sans-serif;
   font-weight: 700;
+}
+
+.cool-button4 {
+  border-radius: 20px;
+  padding: 10px 25px;
+  background-color: white;
+  color: #4ca2cd;
+  text-transform: uppercase;
+  box-shadow: 0px 7px 25px lightblue;
+  margin-left: 20px;
+  border: none;
+  font-size: 1.5vw;
+  letter-spacing: 2.2px;
+  &:hover {
+    background-color: gray;
+  }
 }
 
 @media only screen and (max-width: 930px) {
