--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -150,6 +150,7 @@ label {
   width: 60px;
   margin-top: -50px;
   margin-left: 110%;
+  box-shadow: 0px 7px 25px lightblue;
 }
 
 .reject-user {
@@ -161,17 +162,17 @@ label {
   width: 60px;
   margin-top: -250px;
   margin-left: -115px;
+  box-shadow: 0px 7px 25px lightblue;
 }
 
 .form-control {
-    width: 50%;
+    width: 80%;
     height: 42px;
     padding: 0 15px;
     border: 1px solid #e6e6e6;
     background-color: #eceff1;
     border-radius: 21px;
     display: inline;
-    margin-left: 20%;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     &:focus {
@@ -199,6 +200,34 @@ label {
   letter-spacing: 2.2px;
   &:hover {
     background-color: gray;
+  }
+}
+
+.cool-button5 {
+  border-radius: 20px;
+  padding: 10px 25px;
+  background-color: white;
+  color: #4ca2cd;
+  text-transform: uppercase;
+  box-shadow: 0px 7px 25px lightblue;
+  margin-left: 33%;
+  border: none;
+  font-size: 1.5vw;
+  letter-spacing: 2.2px;
+  &:hover {
+    background-color: gray;
+  }
+}
+
+@media only screen and (max-width: 895px) and (min-width: 575px) {
+  .form-control {
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 412px) {
+  .form-control {
+    width: 60%;
   }
 }
 
