--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -165,7 +165,7 @@ label {
   box-shadow: 0px 7px 25px lightblue;
 }
 
-.form-control {
+.searchysearch {
     width: 80%;
     height: 42px;
     padding: 0 15px;
