Added toggle description on chat page

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -261,6 +261,13 @@ label {
   }
 }
 
+#Popover1 {
+  color: black;
+  background-color: transparent;
+  margin-left: 15px;
+  border-color: #b3b2b2;;
+}
+
 .removeUser {
   color: gray;
   width: 20px;
