on search, only displays messages of searched user

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -311,6 +311,7 @@ label {
     border-radius: 21px;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
+    font-size: 15px;
     &:focus {
       outline: none;
     }
