--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -135,8 +135,9 @@ label {
 }
 
 .after-button {
-  margin-top: 30px;
+  margin-top: 40px;
   margin-bottom: 20px;
+  background-color:white;
 }
 
 /*Matches*/
