case insenstitive search

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -138,8 +138,10 @@ body, html {
 
 .cool-button3 {
   margin-bottom: 30px;
+  margin-right: 10px;
   border-radius: 20px;
   padding: 10px 25px;
+
   background-color: white;
   color: #4ca2cd;
   text-transform: uppercase;
