--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -258,6 +258,7 @@ label {
   text-transform: uppercase;
   box-shadow: 0px 7px 25px lightblue;
   margin-left: 20px;
+  margin-top: 10px;
   border: none;
   font-size: 1.5vw;
   letter-spacing: 2.2px;
